--- a/_projects/5_35n36e.markdown
+++ b/_projects/5_35n36e.markdown
@@ -2,8 +2,10 @@
 layout: project
 title: 35.5056N 36.6013E
 year: 2018
-description: single channel; real-time projection
+description: single channel, real-time projection
 img: /img/projects/35n36e/capture.png
+offsetx: -66%
+offsety: -5%
 ---
 
 We are looking at the live feed from a drone as it circles around a small compound consisting of an industrial building and a residential house. There is an uneasy sense of dread as we coldly orbit the target. What is this location and why is it being targeted? We assume the role of the military analyst, the distant observer who wields power over what will happen next.
